--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "packageManager": "pnpm@9.0.0",
   "engines": {
     "node": ">=18"
+  },
+  "dependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
+    "prettier-plugin-tailwindcss": "^0.7.1"
   }
 }
